--- a/app/views/evaluation_forms/new.html.erb
+++ b/app/views/evaluation_forms/new.html.erb
@@ -1,26 +1,38 @@
 <h1>EvaluationForms#new</h1>
-<p>Find me in app/views/evaluation_forms/new.html.erb</p>
 
 <%= form_with(model: @evaluation_form, url: evaluation_forms_path, id: 'data-form') do |form| %>
-  <div id="dynamic-fields-container">
-    <!-- Existing form fields or generated radio buttons can be inserted here -->
+  <div class="container-fluid my-4">
+    <div id="dynamic-fields-container" class="mb-3">
+      <!-- Existing form fields or generated radio buttons can be inserted here -->
+    </div>
+
+    <div class="form-group mb-3">
+      <label for="evaluation-criterium-select" class="form-label">Evaluation Criterium</label>
+      <select name="evaluation_criterium_id" id="evaluation-criterium-select" class="form-select">
+        <% @evaluation_criteriums.each do |criterium| %>
+          <option value="<%= criterium.id %>" data-name="<%= criterium.criteria %>" data-description="<%= criterium.description %>">
+            <%= criterium.criteria %>
+          </option>
+        <% end %>
+      </select>
+    </div>
+
+    <%= form.hidden_field :form_fields, value: nil, id: "hidden-field" %>
+
+<div class="form-group mb-3">
+  <label for="evaluation-form-evaluator" class="form-label">Evaluator</label>
+  <%= form.select :evaluator, [["Evaluator", nil],["Student","student"], ["Instructor","instructor"]], {}, class: "form-select form-control" %>
+</div>
+
+
+    <%= form.submit :submit_form_fields, value: "Save Form Fields", id: "submit-form-fields", class: "btn btn-primary" %>
+
+<button id="add-radio-buttons" class="btn btn-secondary">Add Radio Buttons</button>
   </div>
-
-  <select name="evaluation_criterium_id" id="evaluation-criterium-select">
-    <% @evaluation_criteriums.each do |criterium| %>
-      <option value="<%= criterium.id %>" data-name="<%= criterium.criteria %>" data-description="<%= criterium.description %>">
-        <%= criterium.criteria %>
-      </option>
-    <% end %>
-  </select>
-
-  
-
-  <%= form.hidden_field :form_fields, value: nil, id: "hidden-field" %>
-  <%= form.select :evaluator, [["Evaluator", nil],["Student","student"], ["Instructor","instructor"]] %>
-  <%= form.submit :submit_form_fields, value: "Save Form Fields", id: "submit-form-fields" %>
 <% end %>
-<button id="add-radio-buttons">Add Radio Buttons</button>
+
+
+
 <script>
   // Retrieve the select element and add an event listener to capture the selected option
   var selectElement = document.getElementById('evaluation-criterium-select');
@@ -45,23 +57,36 @@
   var addButton = document.getElementById('add-radio-buttons');
   var container = document.getElementById('dynamic-fields-container');
 
-  addButton.addEventListener('click', function() {
+  addButton.addEventListener('click', function(event) {
+    event.preventDefault();
     var fieldHtml = `
+      <div class="form-group">
       <p>${selectedDescription}:</p>
-      <input type="radio" name="evaluation_form[form_fields][${selectedId}]" value="1" id="q${selectedId}_1">
-      <label for="q${selectedId}_1">1</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="evaluation_form[form_fields][${selectedId}]" value="1" id="q${selectedId}_1">
+        <label class="form-check-label" for="q${selectedId}_1">1</label>
+      </div>
       
-      <input type="radio" name="evaluation_form[form_fields][${selectedId}]" value="2" id="q${selectedId}_2">
-      <label for="q${selectedId}_2">2</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="evaluation_form[form_fields][${selectedId}]" value="2" id="q${selectedId}_2">
+        <label class="form-check-label" for="q${selectedId}_2">2</label>
+      </div>
 
-      <input type="radio" name="evaluation_form[form_fields][${selectedId}]" value="3" id="q${selectedId}_3">
-      <label for="q${selectedId}_3">3</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="evaluation_form[form_fields][${selectedId}]" value="3" id="q${selectedId}_3">
+        <label class="form-check-label" for="q${selectedId}_3">3</label>
+      </div>
 
-      <input type="radio" name="evaluation_form[form_fields][${selectedId}]" value="4" id="q${selectedId}_4">
-      <label for="q${selectedId}_4">4</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="evaluation_form[form_fields][${selectedId}]" value="4" id="q${selectedId}_4">
+        <label class="form-check-label" for="q${selectedId}_4">4</label>
+      </div>
 
-      <input type="radio" name="evaluation_form[form_fields][${selectedId}]" value="5" id="q${selectedId}_5">
-      <label for="q${selectedId}_5">5</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="evaluation_form[form_fields][${selectedId}]" value="5" id="q${selectedId}_5">
+        <label class="form-check-label" for="q${selectedId}_5">5</label>
+      </div>
+    </div>
     `;
 
     container.insertAdjacentHTML('beforeend', fieldHtml);
