--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,10 +1,13 @@
 <h1>Courses#edit</h1>
-<p>Find me in app/views/courses/edit.html.erb</p>
-<h1>Edit course</h1>
-<%= form_with(model: @course, url: course_path(@course), method: :put) do |form| %>
-  <%= form.label :course_name %><br/>
-  <%= form.text_field :course_name, value: @course.course_name %><br/>
+<%= form_with(model: @course, url: course_path(@course), method: :put, class: "needs-validation", novalidate: true) do |form| %>
+  <div class="mb-3">
+    <%= form.label :course_name, class: "form-label" %>
+    <%= form.text_field :course_name, value: @course.course_name, class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      Please provide a course name.
+    </div>
+  </div>
 
   <br/><br/>
-  <%= form.submit %>
+  <%= form.submit "Update Course", class: "btn btn-primary" %>
 <% end %>
