--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,16 +1,25 @@
 <h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Course Name</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= link_to course.course_name, course_path(course) %></td>
+        <td>
+          <%= link_to "Edit", edit_course_path(course), class: "btn btn-primary me-2" %>
+          <%= link_to "Delete", course_path(course), method: :delete, data: {
+                          turbo_method: :delete,
+                          turbo_confirm: "Are you sure?"
+                        }, class: "btn btn-danger", remote: true %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<ul>
-  <% @courses.each do |course| %>
-    <li><%= link_to course.course_name, course_path(course) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit course", edit_course_path(course) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', course_path(course), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-</li>
-    
-  <% end %>
-</ul>
-<%= link_to "New course", new_course_path %>
+<%= link_to "New course", new_course_path, class: "btn btn-success" %>
