--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,7 +1,12 @@
 <h1>Courses#new</h1>
-<p>Find me in app/views/courses/new.html.erb</p>
-<%= form_with(model: @course, url: courses_path) do |form| %>
-  <%= form.label :course_name %><br/>
-  <%= form.text_field :course_name %><br/>
-  <%= form.submit %>
+<%= form_with(model: @course, url: courses_path, class: "needs-validation", novalidate: true) do |form| %>
+  <div class="mb-3">
+    <%= form.label :course_name, class: "form-label" %>
+    <%= form.text_field :course_name, class: "form-control", required: true %>
+    <div class="invalid-feedback">
+      Please provide a course name.
+    </div>
+  </div>
+
+  <%= form.submit "Create Course", class: "btn btn-primary" %>
 <% end %>
