--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -1,12 +1,15 @@
 <h1>Departments#edit</h1>
-<p>Find me in app/views/departments/edit.html.erb</p>
-<h1>Edit department</h1>
-<%= form_with(model: @department, url: department_path(@department), method: :put) do |form| %>
-  <%= form.label :dep_name %><br/>
-  <%= form.text_field :dep_name, value: @department.dep_name %><br/>
-  <%= form.label :college_id %><br/>
-  <%= form.select :college_id, options_for_select(colleges_for_select,@department.college_id) %><br/>
+<%= form_with(model: @department, url: department_path(@department), method: :put, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :dep_name, class: "form-label" %><br/>
+    <%= form.text_field :dep_name, value: @department.dep_name, class: "form-control" %><br/>
+  </div>
+
+  <div class="mb-3">
+  <%= form.label :college_id, class: "form-label" %><br/>
+  <%= form.select :college_id, options_for_select(colleges_for_select, @department.college_id), { include_blank: true }, class: "form-select" %><br/>
+</div>
 
   <br/><br/>
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
