--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,49 +1,27 @@
 <h1>Departments#index</h1>
-<p>Find me in app/views/departments/index.html.erb</p>
-<ul>
-  <% @departments.each do |department| %>
-    <li><%= link_to department.dep_name, department_path(department) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit department", edit_department_path(department) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', department_path(department), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-</li>
-    
-  <% end %>
-</ul>
-<%= link_to "New department", new_department_path %>
-
-<div class="container-fluid shadow rounded mt-3 pb-2 ">
-  <%= button_tag(type: "button", class: "btn btn-primary my-2 float-end") do %>
-  <i class="bi bi-plus-square"></i>
-  <span>Add department</span>
-  <% end %>
-  <table class="table table-striped table-bordered table-auto ">
-    <thead>
-      <tr class="table-primary">
-        <th></th>
-        <th class="text-center">Department Name</th>
-        <th class="text-center">College</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @departments.each_with_index do |department,index| %>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Department</th>
+      <th>College</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @departments.each do |department| %>
       <tr>
-        <td class="text-center"><%= index + 1 %></td>
-        <td class="text-center"><%= department.dep_name %></td>
-        <td class="text-center"><%= department.college.college_name %></td>
-        <td class="text-center">
-          <%= button_tag(type: "button", class: "btn btn-warning mx-5") do %>
-          <i class="bi bi-pencil-square"></i><span>Edit</span>
-          <% end %> 
-          <%= button_tag(type: "button", class: "btn btn-danger mx-5") do %>
-          <i class="bi bi-trash"></i><span>Delete</span>
-          <% end %> 
+        <td><%= department.dep_name %></td>
+        <td><%= department.college.college_name %></td>
+        <td>
+          <%= link_to "Edit", edit_department_path(department), class: "btn btn-primary btn-sm" %>
+          <%= link_to "Delete", department_path(department), method: :delete, data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+          }, class: "btn btn-danger btn-sm" %>
         </td>
       </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to "New department", new_department_path, class: "btn btn-success" %>
