--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,10 +1,14 @@
 <h1>Departments#new</h1>
-<p>Find me in app/views/departments/new.html.erb</p>
-<%= form_with(model: @department, url: departments_path) do |form| %>
-  <%= form.label :dep_name %><br/>
-  <%= form.text_field :dep_name %><br/>
-  <%= form.label :college_id %><br/>
-  <%= form.select :college_id, options_for_select(colleges_for_select),include_blank: true %><br/>
+<%= form_with(model: @department, url: departments_path, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :dep_name, class: "form-label" %><br/>
+    <%= form.text_field :dep_name, class: "form-control" %><br/>
+  </div>
 
-  <%= form.submit %>
+  <div class="mb-3">
+    <%= form.label :college_id, class: "form-label" %><br/>
+    <%= form.select :college_id, options_for_select(colleges_for_select), { include_blank: true }, class: "form-select" %><br/>
+  </div>
+
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
