--- a/app/views/evaluation_criteriums/index.html.erb
+++ b/app/views/evaluation_criteriums/index.html.erb
@@ -1,48 +1,26 @@
 <h1>EvaluationCriteriums#index</h1>
-<p>Find me in app/views/evaluation_criteriums/index.html.erb</p>
-<ul>
-  <% @evaluation_criteriums.each do |evaluation_criterium| %>
-    <li><%= evaluation_criterium.criteria %>&nbsp;&nbsp;&nbsp;
-    <%= evaluation_criterium.description %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit evaluation_criterium", edit_evaluation_criterium_path(evaluation_criterium) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', evaluation_criterium_path(evaluation_criterium), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-</li>
-    
-  <% end %>
-</ul>
-<%= link_to "New evaluation_criterium", new_evaluation_criterium_path %>
-
-<div class="container-fluid shadow rounded mt-3 pb-2 ">
-  <%= button_tag(type: "button", class: "btn btn-primary my-2 float-end") do %>
-  <i class="bi bi-plus-square"></i>
-  <span>Add Criteria</span>
-  <% end %>
-  <table class="table table-striped table-bordered table-auto ">
-    <thead>
-      <tr class="table-primary">
-        <th>Criteria</th>
-        <th>Description</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @evaluation_criteriums.each do |evaluation_criterium| %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Criteria</th>
+      <th>Description</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @evaluation_criteriums.each do |evaluation_criterium| %>
       <tr>
-        <td class="text-center"><%= evaluation_criterium.criteria %></td>
-        <td class="text-center"><%= evaluation_criterium.description %></td>
-        <td class="text-center">
-          <%= button_tag(type: "button", class: "btn btn-warning mx-5") do %>
-          <i class="bi bi-pencil-square"></i><span>Edit</span>
-          <% end %> 
-          <%= button_tag(type: "button", class: "btn btn-danger mx-5") do %>
-          <i class="bi bi-trash"></i><span>Delete</span>
-          <% end %> 
+        <td><%= evaluation_criterium.criteria %></td>
+        <td><%= evaluation_criterium.description %></td>
+        <td>
+          <%= link_to "Edit", edit_evaluation_criterium_path(evaluation_criterium), class: "btn btn-primary" %>
+          <%= link_to "Delete", evaluation_criterium_path(evaluation_criterium), method: :delete, data: {
+                turbo_method: :delete,
+                turbo_confirm: "Are you sure?"
+              }, class: "btn btn-danger" %>
         </td>
       </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to "New evaluation criterium", new_evaluation_criterium_path, class: "btn btn-success" %>
