--- a/app/views/evaluation_forms/index.html.erb
+++ b/app/views/evaluation_forms/index.html.erb
@@ -1,17 +1,28 @@
-<h1>EvaluationForms#index</h1>
-<p>Find me in app/views/evaluation_forms/index.html.erb</p>
-  
-<ul>
-  <% @evaluation_forms.each do |evaluation_form| %>
-    <li>
-      <%= link_to evaluation_form.id, evaluation_form_path(evaluation_form) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit evaluation_form", edit_evaluation_form_path(evaluation_form) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', evaluation_form_path(evaluation_form), method: :delete, data: {
+<div class="container">
+  <h1>EvaluationForms#index</h1>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Evaluation Form for</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @evaluation_forms.each do |evaluation_form| %>
+      <tr>
+        <td><%= link_to evaluation_form.id, evaluation_form_path(evaluation_form) %></td>
+        <td><%= evaluation_form.evaluator %></td>
+        <td>
+          <%= link_to "Edit", edit_evaluation_form_path(evaluation_form), class: "btn btn-primary me-2" %>
+          <%= link_to "Delete", evaluation_form_path(evaluation_form), method: :delete, data: {
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
-                  } %> 
-</li>
-    
-  <% end %>
-</ul>
-<%= link_to "New evaluation_form", new_evaluation_form_path %>
+                  }, class: "btn btn-danger" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= link_to "New evaluation_form", new_evaluation_form_path, class: "btn btn-success" %>
+</div>
