--- a/app/views/instructors/edit.html.erb
+++ b/app/views/instructors/edit.html.erb
@@ -1,16 +1,19 @@
 <h1>Instructors#edit</h1>
-<p>Find me in app/views/instructors/edit.html.erb</p>
-<h1>Edit instructor</h1>
-<%= form_with(model: @instructor, url: instructor_path(@instructor), method: :put) do |form| %>
+<%= form_with(model: @instructor, url: instructor_path(@instructor), method: :put, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %><br/>
+    <%= form.text_field :name, value: @instructor.name, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :name %><br/>
-  <%= form.text_field :name,value: @instructor.name %><br/>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %><br/>
+    <%= form.text_field :email, value: @instructor.email, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :email %><br/>
-  <%= form.text_field :email, value: @instructor.email %><br/>
-
-  <%= form.label :college_id %><br/>
-  <%= form.select :college_id, options_for_select(colleges_for_select,@instructor.college_id),include_blank: true %><br/>
+  <div class="mb-3">
+    <%= form.label :college_id, class: "form-label" %><br/>
+    <%= form.select :college_id, options_for_select(colleges_for_select, @instructor.college_id), { include_blank: true }, class: "form-select" %><br/>
+  </div>
   <br/><br/>
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
