--- a/app/views/instructors/new.html.erb
+++ b/app/views/instructors/new.html.erb
@@ -1,17 +1,24 @@
 <h1>Instructors#new</h1>
-<p>Find me in app/views/instructors/new.html.erb</p>
-<%= form_with(model: @instructor, url: instructors_path) do |form| %>
-  <%= form.label :name %><br/>
-  <%= form.text_field :name %><br/>
+<%= form_with(model: @instructor, url: instructors_path, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %><br/>
+    <%= form.text_field :name, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :email %><br/>
-  <%= form.text_field :email %><br/>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %><br/>
+    <%= form.text_field :email, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :password %><br/>
-  <%= form.text_field :password %><br/>
+  <div class="mb-3">
+    <%= form.label :password, class: "form-label" %><br/>
+    <%= form.password_field :password, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :college_id %><br/>
-  <%= form.select :college_id, options_for_select(colleges_for_select),include_blank: true %><br/>
+  <div class="mb-3">
+    <%= form.label :college_id, class: "form-label" %><br/>
+    <%= form.select :college_id, options_for_select(colleges_for_select), { include_blank: true }, class: "form-select" %><br/>
+  </div>
 
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
