--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,22 +1,29 @@
 <h1>Students#edit</h1>
-<p>Find me in app/views/students/edit.html.erb</p>
-<%= form_with(model: @student, url: student_path(@student), method: :put) do |form| %>
+<%= form_with(model: @student, url: student_path(@student), method: :put, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %><br/>
+    <%= form.text_field :name, value: @student.name, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :name %><br/>
-  <%= form.text_field :name, value: @student.name %><br/>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %><br/>
+    <%= form.text_field :email, value: @student.email, class: "form-control" %><br/>
+  </div>
 
-  <%= form.label :email %><br/>
-  <%= form.text_field :email, value: @student.email %><br/>
+  <div class="mb-3">
+    <%= form.label :college_id, class: "form-label" %><br/>
+    <%= form.select :college_id, options_for_select(colleges_for_select, @student.college_id), { include_blank: true }, class: "form-select" %><br/>
+  </div>
 
-  <%= form.label :college_id %><br/>
-  <%= form.select :college_id, options_for_select(colleges_for_select, @student.college_id),include_blank: true %><br/>
+  <div class="mb-3">
+    <%= form.label :department_id, class: "form-label" %><br/>
+    <%= form.select :department_id, options_for_select(departments_for_select, @student.department_id), { include_blank: true }, class: "form-select" %><br/>
+  </div>
 
-  <%= form.label :department_id %><br/>
-  <%= form.select :department_id, options_for_select(departments_for_select, @student.department_id),include_blank: true %><br/>
+  <div class="mb-3">
+    <%= form.label :semester_id, class: "form-label" %><br/>
+    <%= form.select :semester_id, options_for_select(semesters_for_select, @student.semester_id), { include_blank: true }, class: "form-select" %><br/>
+  </div>
 
-  <%= form.label :semester_id %><br/>
-  <%= form.select :semester_id, options_for_select(semesters_for_select, @student.semester_id),include_blank: true %><br/>
-
-  <br/><br/>
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
