--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,16 +1,30 @@
 <h1>Students#index</h1>
-  <% @students.each do |student| %>
-    <li><%= link_to student.name, student_path(student) %>&nbsp;&nbsp;&nbsp;
-    <%= student.department.dep_name %>&nbsp;&nbsp;&nbsp;
-    <%= student.college.college_name %>&nbsp;&nbsp;&nbsp;
-    <%= student.semester.sem %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit student", edit_student_path(student) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', student_path(student), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-    </li>
-    
-  <% end %>
-  </ul>
-<%= link_to "New student", new_student_path %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Department</th>
+      <th>College</th>
+      <th>Semester</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @students.each do |student| %>
+      <tr>
+        <td><%= link_to student.name, student_path(student) %></td>
+        <td><%= student.department.dep_name %></td>
+        <td><%= student.college.college_name %></td>
+        <td><%= student.semester.sem %></td>
+        <td>
+          <%= link_to "Edit", edit_student_path(student), class: "btn btn-primary me-2" %>
+          <%= link_to "Delete", student_path(student), method: :delete, class: "btn btn-danger", data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+          } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to "New student", new_student_path, class: "btn btn-success" %>
