--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,24 +1,32 @@
 <h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
-<ul>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Course</th>
+      <th>Department</th>
+      <th>Instructor</th>
+      <th>Semester</th>
+      <th>Active</th>
+      <th>Start Evaluation</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @tasks.each do |task| %>
+      <tr>
+        <td><%= task.course.course_name %></td>
+        <td><%= task.department.dep_name %></td>
+        <td><%= task.instructor.name %></td>
+        <td><%= task.semester.sem %></td>
+        <td><%= task.active %></td>
+        <td><%= task.start_eval %></td>
+        <td><%= link_to "Edit Task", edit_task_path(task), class: "btn btn-primary m-1" %>
+          <%= link_to 'Delete', task_path(task), method: :delete, class: "btn btn-danger m-1",
+                      data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-  <% @tasks.each do |task| %>
-  <li>
-    <%= task.course.course_name %>&nbsp;&nbsp;&nbsp;
-    <%= task.department.dep_name %>&nbsp;&nbsp;&nbsp;
-    <%= task.instructor.name %>&nbsp;&nbsp;&nbsp;
-    <%= task.semester.sem %>&nbsp;&nbsp;&nbsp;
-    <%= task.active %>&nbsp;&nbsp;&nbsp;
-    <%= task.start_eval %>&nbsp;&nbsp;&nbsp;
-    <%= link_to "Edit task", edit_task_path(task) %>&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', task_path(task), method: :delete, data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %> 
-    </li>
-    
-  <% end %>
-  </ul>
-  <button type="button" class="btn btn-primary">Bootstrap Button</button>
-
-<%= link_to "New task", new_task_path %>
+<%= link_to "New Task", new_task_path, class: "btn btn-success" %>
