--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,18 @@
 <h1>Users#edit</h1>
 <p>Find me in app/views/users/edit.html.erb</p>
-<%= form_with(model: @user, url: user_path(@user), method: :patch) do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name, value: @user.name %>
-  <%= form.label :email %>
-  <%= form.text_field :email, value: @user.email %>
+<%= form_with(model: @user, url: user_path(@user), method: :patch, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control", value: @user.name %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.text_field :email, class: "form-control", value: @user.email %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :type, class: "form-label" %>
+    <%= form.select :type, [["none", ""], ["admin", "Admin"]], { selected: @user.type }, class: "form-select" %>
+  </div>
 
-  <%= form.select :type, [["none",""], ["admin","Admin"]], value: @user.type %>
-
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
