--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,22 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
-<%= form_with(model: @user, url: users_path) do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name %>
-  <%= form.label :email %>
-  <%= form.text_field :email %>
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-  <%= form.select :type, [["none",""], ["admin","Admin"]] %>
+<%= form_with(model: @user, url: users_path, class: "form") do |form| %>
+  <div class="mb-3">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.text_field :email, class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :password, class: "form-label" %>
+    <%= form.password_field :password, class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :type, class: "form-label" %>
+    <%= form.select :type, [["none", ""], ["admin", "Admin"]], {}, class: "form-select" %>
+  </div>
 
-  <%= form.submit %>
+  <%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
